<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical"
    tools:context=".ui.crew.DevelopmentTeamFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/crew_title"
        style="@style/ToolbarStyleParent.AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/ToolbarStyleParent.ToolBar"
            app:title="@string/crew_title">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_16dp">

        <TextView
            android:id="@+id/workers_list"
            style="@style/FontDisplay.Bold32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/workers_list" />

        <TextView
            android:id="@+id/worker_first"
            style="@style/FontDisplay.Medium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/first_team_member" />

        <TextView
            android:id="@+id/worker_second"
            style="@style/FontDisplay.Medium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/second_team_member" />

        <TextView
            android:id="@+id/worker_third"
            style="@style/FontDisplay.Medium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/third_team_member" />

        <TextView
            android:id="@+id/worker_fourth"
            style="@style/FontDisplay.Medium16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/fourth_team_member" />
    </LinearLayout>

</LinearLayout>
