<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginTop="@dimen/dimen_8dp"
    android:background="?attr/background_color"
    tools:context=".ui.vacancy.VacancyDetailsFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:backgroundTint="?attr/background_color"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/FontDisplay.Medium22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_4dp"
        android:text="@string/vacancy"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toStartOf="@id/share_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_4dp"
        android:backgroundTint="?attr/background_color"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        android:src="@drawable/share_icon"
        app:layout_constraintEnd_toStartOf="@id/favorites_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/favorites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:backgroundTint="?attr/background_color"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        android:src="@drawable/favorites_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:paddingHorizontal="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_24dp">

            <TextView
                android:id="@+id/vacancy_name"
                style="@style/FontDisplay.Bold32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vacancy_name"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/salary"
                style="@style/FontDisplay.Medium22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/vacancy_salary"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/vacancy_name" />

            <View
                android:id="@+id/company_card"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:background="@drawable/rounded_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/salary" />

            <ImageView
                android:id="@+id/company_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/dimen_16dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:contentDescription="@string/company_logo"
                android:src="@drawable/logo_icon"
                app:layout_constraintBottom_toBottomOf="@id/company_card"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@id/company_card"
                app:layout_constraintTop_toTopOf="@id/company_card" />

            <TextView
                android:id="@+id/company_name"
                style="@style/FontDisplay.Medium22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:text="@string/company_name"
                android:textColor="@color/black_universal"
                app:layout_constraintBottom_toTopOf="@id/company_address"
                app:layout_constraintEnd_toEndOf="@id/company_card"
                app:layout_constraintStart_toEndOf="@id/company_logo"
                app:layout_constraintTop_toTopOf="@id/company_logo" />

            <TextView
                android:id="@+id/company_address"
                style="@style/FontDisplay.Regular16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:text="@string/company_address"
                android:textColor="@color/black_universal"
                app:layout_constraintBottom_toBottomOf="@id/company_logo"
                app:layout_constraintEnd_toEndOf="@id/company_card"
                app:layout_constraintStart_toEndOf="@id/company_logo"
                app:layout_constraintTop_toBottomOf="@id/company_name" />

            <TextView
                android:id="@+id/experience_title"
                style="@style/FontDisplay.Medium16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:text="@string/experience"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_card" />

            <TextView
                android:id="@+id/experience"
                style="@style/FontDisplay.Regular16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/experience_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/experience_title" />

            <TextView
                android:id="@+id/schedule"
                style="@style/FontDisplay.Regular16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/schedule"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/experience" />

            <TextView
                android:id="@+id/vacancy_description_title"
                style="@style/FontDisplay.Medium22"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:text="@string/vacancy_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/schedule" />

            <TextView
                android:id="@+id/responsibilities"
                style="@style/FontDisplay.Medium16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/responsibilities"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vacancy_description_title" />

            <TextView
                android:id="@+id/responsibilities_list"
                style="@style/FontDisplay.Regular16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/responsibilities_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/responsibilities" />

            <TextView
                android:id="@+id/requirements"
                style="@style/FontDisplay.Medium16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/requirements"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/responsibilities_list" />

            <TextView
                android:id="@+id/requirements_list"
                style="@style/FontDisplay.Regular16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/requirements_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/requirements" />

            <TextView
                android:id="@+id/conditions"
                style="@style/FontDisplay.Medium16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/conditions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/requirements_list" />

            <TextView
                android:id="@+id/conditions_list"
                style="@style/FontDisplay.Regular16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/conditions_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conditions" />

            <TextView
                android:id="@+id/skills_title"
                style="@style/FontDisplay.Medium22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:text="@string/skills_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conditions_list" />

            <TextView
                android:id="@+id/skills_list"
                style="@style/FontDisplay.Regular16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/skills_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skills_title" />

            <TextView
                android:id="@+id/contacts_title"
                style="@style/FontDisplay.Medium22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:text="@string/contacts_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skills_list" />

            <TextView
                android:id="@+id/email_title"
                style="@style/FontDisplay.Regular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contacts_title" />

            <TextView
                android:id="@+id/email"
                style="@style/FontDisplay.Regular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/email"
                app:layout_constraintStart_toEndOf="@id/email_title"
                app:layout_constraintTop_toBottomOf="@id/contacts_title" />

            <TextView
                android:id="@+id/phone_title"
                style="@style/FontDisplay.Regular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_title" />

            <TextView
                android:id="@+id/p"
                style="@style/FontDisplay.Regular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/phone"
                app:layout_constraintStart_toEndOf="@id/phone_title"
                app:layout_constraintTop_toBottomOf="@id/email_title" />

            <TextView
                android:id="@+id/comment_title"
                style="@style/FontDisplay.Regular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginBottom="@dimen/dimen_24dp"
                android:text="@string/comment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_title" />

            <TextView
                android:id="@+id/comment"
                style="@style/FontDisplay.Regular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:layout_marginBottom="@dimen/dimen_24dp"
                android:text="@string/comment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/comment_title"
                app:layout_constraintTop_toBottomOf="@id/phone_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
